--- a/juegos/DeadCells.html
+++ b/juegos/DeadCells.html
@@ -34,7 +34,7 @@
             <a href="../juegos/GoWRagnarok.html" class="link">God of War Ragnarok</a></br>
             <button class="categoria">Soulslike</button></br>
             <a href="../juegos/EldenRing.html" class="link">Elden Ring</a></br>
-            <a href="../juegos/Sekiro.html" class="link">Sekiro</a></br>
+            <a href="../juegos/Sekiro.html" class="link">Sekiro: Shadows Die Twice</a></br>
             <a href="../juegos/DeathsDoor.html" class="link">Death's Door</a></br>
             <button class="categoria">Simulación</button></br>
             <a href="../juegos/StardewValley.html" class="link">Stardew Valley</a></br>
@@ -51,24 +51,32 @@
             <div class="info-juego">
                 <img class="portada" src="../IMG/DeadCells.jpg" alt="DeadCells">
                 <div class="texto-juego">
-                    <h2>Deads Cells</h2>
-                    <p>Descripcion juego 1</p>
+                    <h2>Dead Cells</h2>
+                    <p>Dead Cells es un roguelite metroidvania en 2D que combina exploración, acción rápida y combates desafiantes. Cada partida es diferente, con mapas generados proceduralmente y una progresión basada en la habilidad del jugador.</p>
                 </div>
             </div>
 
             <div class="bloque-info">
                 <h3>System Requirements</h3>
-                <p>Especificaciones juego 1</p>
+                <p>SO: Windows 7 / 10 / 11</br>
+                    Procesador: Intel i5-2500 / AMD FX-6300</br>
+                    Memoria: 4 GB RAM</br>
+                    Gráficos: NVIDIA GTX 450 / AMD HD 5750</br>
+                    Almacenamiento: 500 MB</p>
             </div>
 
             <div class="bloque-info">
                 <h4>Features</h4>
-                <p>Features juego 1</p>
+                <p>Combates rápidos y precisos con armas variadas.</br>
+                    Mapas y enemigos generados aleatoriamente.</br>
+                    Sistema de progresión permanente con mejoras y mutaciones.</br>
+                    Estilo pixel art fluido con animaciones de alta calidad.</br>
+                    Contenido adicional constante gracias a actualizaciones y DLCs.</p>
             </div>
 
             <div class="bloque-info">
                 <h5>Reseñas</h5>
-                <p>Reseñas del juego 1</p>
+                <p><b>@RespawnKnight: </b>“Cada muerte es una lección. El control es tan preciso que nunca sientes que el juego sea injusto. Simplemente adictivo. Siempre hay una razón para otra partida.”</p>
             </div>
         </main>
         <footer>
