--- a/juegos/EldenRing.html
+++ b/juegos/EldenRing.html
@@ -34,7 +34,7 @@
             <a href="../juegos/GoWRagnarok.html" class="link">God of War Ragnarok</a></br>
             <button class="categoria">Soulslike</button></br>
             <a href="../juegos/EldenRing.html" class="link">Elden Ring</a></br>
-            <a href="../juegos/Sekiro.html" class="link">Sekiro</a></br>
+            <a href="../juegos/Sekiro.html" class="link">Sekiro: Shadows Die Twice</a></br>
             <a href="../juegos/DeathsDoor.html" class="link">Death's Door</a></br>
             <button class="categoria">Simulación</button></br>
             <a href="../juegos/StardewValley.html" class="link">Stardew Valley</a></br>
@@ -52,23 +52,30 @@
                 <img class="portada" src="../IMG/EldenRing.jpg" alt="EldenRing">
                 <div class="texto-juego">
                     <h2>Elden Ring</h2>
-                    <p>Descripcion juego 1</p>
+                    <p>Un RPG de acción en mundo abierto creado por FromSoftware, donde los jugadores exploran Las Tierras Intermedias en busca del Círculo de Elden.</p>
                 </div>
             </div>
 
             <div class="bloque-info">
                 <h3>System Requirements</h3>
-                <p>Especificaciones juego 1</p>
+                <p>SO: Windows 10</br>
+                    Procesador: Intel i5-8400 / Ryzen 3 3300X</br>
+                    Memoria: 12 GB RAM</br>
+                    Gráficos: GTX 1060 / RX 580</br>
+                    Almacenamiento: 60 GB</p>
             </div>
 
             <div class="bloque-info">
                 <h4>Features</h4>
-                <p>Features juego 1</p>
+                <p>Mundo abierto masivo y orgánico.</br>
+                    Combate desafiante al estilo Souls.</br>
+                    Cooperativo y PvP online.</br>
+                    Historia escrita por George R. R. Martin.</p>
             </div>
 
             <div class="bloque-info">
                 <h5>Reseñas</h5>
-                <p>Reseñas del juego 1</p>
+                <p><b>@TarnishedSoul: </b>“Es un universo en sí mismo. Te pierdes, mueres, aprendes y vuelves más fuerte. FromSoftware superó todas las expectativas. Pura libertad y sufrimiento glorioso.”</p>
             </div>
         </main>
         <footer>
