--- a/juegos/Forza.html
+++ b/juegos/Forza.html
@@ -34,7 +34,7 @@
             <a href="../juegos/GoWRagnarok.html" class="link">God of War Ragnarok</a></br>
             <button class="categoria">Soulslike</button></br>
             <a href="../juegos/EldenRing.html" class="link">Elden Ring</a></br>
-            <a href="../juegos/Sekiro.html" class="link">Sekiro</a></br>
+            <a href="../juegos/Sekiro.html" class="link">Sekiro: Shadows Die Twice</a></br>
             <a href="../juegos/DeathsDoor.html" class="link">Death's Door</a></br>
             <button class="categoria">Simulación</button></br>
             <a href="../juegos/StardewValley.html" class="link">Stardew Valley</a></br>
@@ -52,23 +52,30 @@
                 <img class="portada" src="../IMG/ForzaHorizon5.jpg" alt="Forza">
                 <div class="texto-juego">
                     <h2>Forza Horizon 5</h2>
-                    <p>Descripcion juego 1</p>
+                    <p>Juego de carreras en mundo abierto ambientado en México, con paisajes dinámicos, estaciones y cientos de vehículos.</p>
                 </div>
             </div>
 
             <div class="bloque-info">
                 <h3>System Requirements</h3>
-                <p>Especificaciones juego 1</p>
+                <p>SO: Windows 10</br>
+                    Procesador: Ryzen 5 1500X / i5-8400</br>
+                    Memoria: 16 GB RAM</br>
+                    Gráficos: GTX 1070 / RX 590</br>
+                    Almacenamiento: 110 GB</p>
             </div>
 
             <div class="bloque-info">
                 <h4>Features</h4>
-                <p>Features juego 1</p>
+                <p>Mundo abierto inspirado en México.</br>
+                    Climas dinámicos y eventos estacionales.</br>
+                    Modo historia y multijugador libre.</br>
+                    Personalización avanzada de autos.</p>
             </div>
 
             <div class="bloque-info">
                 <h5>Reseñas</h5>
-                <p>Reseñas del juego 1</p>
+                <p><b>@SpeedyTamale: </b>“México nunca se vio tan hermoso. Cada coche, cada carretera, pura felicidad. Es el juego de autos más divertido que he probado en años.”</p>
             </div>
         </main>
         <footer>
