--- a/juegos/JWEvolution.html
+++ b/juegos/JWEvolution.html
@@ -34,7 +34,7 @@
             <a href="../juegos/GoWRagnarok.html" class="link">God of War Ragnarok</a></br>
             <button class="categoria">Soulslike</button></br>
             <a href="../juegos/EldenRing.html" class="link">Elden Ring</a></br>
-            <a href="../juegos/Sekiro.html" class="link">Sekiro</a></br>
+            <a href="../juegos/Sekiro.html" class="link">Sekiro: Shadows Die Twice</a></br>
             <a href="../juegos/DeathsDoor.html" class="link">Death's Door</a></br>
             <button class="categoria">Simulación</button></br>
             <a href="../juegos/StardewValley.html" class="link">Stardew Valley</a></br>
@@ -52,23 +52,30 @@
                 <img class="portada" src="../IMG/JurassicWorldEvolution3.jpg" alt="JurassicWorldEvolution">
                 <div class="texto-juego">
                     <h2>Jurassic World Evolution 3</h2>
-                    <p>Descripcion juego 1</p>
+                    <p>Simulador de gestión donde creas y administras tu propio parque jurásico, con nuevas especies y ecosistemas dinámicos.</p>
                 </div>
             </div>
 
             <div class="bloque-info">
                 <h3>System Requirements</h3>
-                <p>Especificaciones juego 1</p>
+                <p>SO: Windows 10 64 bits</br>
+                    Procesador: Intel i7-4770K / Ryzen 5 1600</br>
+                    Memoria: 16 GB RAM</br>
+                    Gráficos: GTX 1070 / RX Vega 56</br>
+                    Almacenamiento: 50 GB</p>
             </div>
 
             <div class="bloque-info">
                 <h4>Features</h4>
-                <p>Features juego 1</p>
+                <p>IA avanzada para dinosaurios.</br>
+                    Ecosistemas realistas con clima dinámico.</br>
+                    Modos de campaña y sandbox.</br>
+                    Construcción libre y biomas variados.</p>
             </div>
 
             <div class="bloque-info">
                 <h5>Reseñas</h5>
-                <p>Reseñas del juego 1</p>
+                <p><b>@DinoArchitect: </b>“El nivel de detalle es impresionante. Ver a tus dinosaurios interactuar con el entorno es hipnótico. Ojalá tuviera más modos sandbox, pero es un salto brutal respecto al anterior.”</p>
             </div>
         </main>
         <footer>
