--- a/juegos/Ori.html
+++ b/juegos/Ori.html
@@ -34,7 +34,7 @@
             <a href="../juegos/GoWRagnarok.html" class="link">God of War Ragnarok</a></br>
             <button class="categoria">Soulslike</button></br>
             <a href="../juegos/EldenRing.html" class="link">Elden Ring</a></br>
-            <a href="../juegos/Sekiro.html" class="link">Sekiro</a></br>
+            <a href="../juegos/Sekiro.html" class="link">Sekiro: Shadows Die Twice</a></br>
             <a href="../juegos/DeathsDoor.html" class="link">Death's Door</a></br>
             <button class="categoria">Simulación</button></br>
             <a href="../juegos/StardewValley.html" class="link">Stardew Valley</a></br>
@@ -52,23 +52,30 @@
                 <img class="portada" src="../IMG/Ori&TheWillOfTheWisps.jpg" alt="Ori&TheWillOfTheWisps">
                 <div class="texto-juego">
                     <h2>Ori & The Will Of The Wisps</h2>
-                    <p>Descripcion juego 1</p>
+                    <p>Metroidvania de plataformas con una emotiva historia y un estilo artístico deslumbrante, secuela de Ori and the Blind Forest.</p>
                 </div>
             </div>
 
             <div class="bloque-info">
                 <h3>System Requirements</h3>
-                <p>Especificaciones juego 1</p>
+                <p>SO: Windows 10</br>
+                    Procesador: AMD Athlon X4 / Intel i5-4460</br>
+                    Memoria: 8 GB RAM</br>
+                    Gráficos: GTX 950 / R7 370</br>
+                    Almacenamiento: 20 GB</p>
             </div>
 
             <div class="bloque-info">
                 <h4>Features</h4>
-                <p>Features juego 1</p>
+                <p>Animaciones fluidas y música orquestal.</br>
+                    Sistema de combate mejorado.</br>
+                    Mundo interconectado y colorido.</br>
+                    Historia emocional y cinematográfica.</p>
             </div>
 
             <div class="bloque-info">
                 <h5>Reseñas</h5>
-                <p>Reseñas del juego 1</p>
+                <p><b>@MoonlightSpirit: </b>“Una experiencia mágica. Arte, música y gameplay en perfecta armonía. Me hizo llorar, reír y gritar en algunos saltos imposibles.”</p>
             </div>
         </main>
         <footer>
