--- a/juegos/StardewValley.html
+++ b/juegos/StardewValley.html
@@ -34,7 +34,7 @@
             <a href="../juegos/GoWRagnarok.html" class="link">God of War Ragnarok</a></br>
             <button class="categoria">Soulslike</button></br>
             <a href="../juegos/EldenRing.html" class="link">Elden Ring</a></br>
-            <a href="../juegos/Sekiro.html" class="link">Sekiro</a></br>
+            <a href="../juegos/Sekiro.html" class="link">Sekiro: Shadows Die Twice</a></br>
             <a href="../juegos/DeathsDoor.html" class="link">Death's Door</a></br>
             <button class="categoria">Simulación</button></br>
             <a href="../juegos/StardewValley.html" class="link">Stardew Valley</a></br>
@@ -52,23 +52,30 @@
                 <img class="portada" src="../IMG/StardewValley.jpg" alt="StardewValley">
                 <div class="texto-juego">
                     <h2>Stardew Valley</h2>
-                    <p>Descripcion juego 1</p>
+                    <p>Simulador de vida y granja donde cultivas, crías animales, pesas, exploras minas y te integras en una comunidad rural.</p>
                 </div>
             </div>
 
             <div class="bloque-info">
                 <h3>System Requirements</h3>
-                <p>Especificaciones juego 1</p>
+                <p>SO: Windows 7 / 10</br>
+                    Procesador: 2 GHz Dual Core</br>
+                    Memoria: 2 GB RAM</br>
+                    Gráficos: Intel HD 3000</br>
+                    Almacenamiento: 500 MB</p>
             </div>
 
             <div class="bloque-info">
                 <h4>Features</h4>
-                <p>Features juego 1</p>
+                <p>Cultivo, pesca, minería y relaciones.</br>
+                    Cooperativo online y local.</br>
+                    Personalización completa del personaje.</br>
+                    Actualizaciones gratuitas con nuevo contenido.</p>
             </div>
 
             <div class="bloque-info">
                 <h5>Reseñas</h5>
-                <p>Reseñas del juego 1</p>
+                <p><b>@ChillFarmer87: </b>“El juego más relajante que existe. Empiezas plantando nabos y terminas casado con una artista. Horas y horas de paz pixelada.”</p>
             </div>
         </main>
         <footer>
