--- a/juegos/Battlefield.html
+++ b/juegos/Battlefield.html
@@ -34,7 +34,7 @@
             <a href="../juegos/GoWRagnarok.html" class="link">God of War Ragnarok</a></br>
             <button class="categoria">Soulslike</button></br>
             <a href="../juegos/EldenRing.html" class="link">Elden Ring</a></br>
-            <a href="../juegos/Sekiro.html" class="link">Sekiro</a></br>
+            <a href="../juegos/Sekiro.html" class="link">Sekiro: Shadows Die Twice</a></br>
             <a href="../juegos/DeathsDoor.html" class="link">Death's Door</a></br>
             <button class="categoria">Simulación</button></br>
             <a href="../juegos/StardewValley.html" class="link">Stardew Valley</a></br>
@@ -75,7 +75,7 @@
 
             <div class="bloque-info">
                 <h5>Reseñas</h5>
-                <p>Reseñas del juego 1</p>
+                <p><b>@IronSpectre94: </b>“El caos en el campo de batalla nunca se sintió tan real. Los mapas enormes y la destrucción total son impresionantes. A veces hay bugs, pero cuando todo funciona, es pura adrenalina.”</p>
             </div>
         </main>
         <footer>
