--- a/juegos/Blasphemous.html
+++ b/juegos/Blasphemous.html
@@ -34,7 +34,7 @@
             <a href="../juegos/GoWRagnarok.html" class="link">God of War Ragnarok</a></br>
             <button class="categoria">Soulslike</button></br>
             <a href="../juegos/EldenRing.html" class="link">Elden Ring</a></br>
-            <a href="../juegos/Sekiro.html" class="link">Sekiro</a></br>
+            <a href="../juegos/Sekiro.html" class="link">Sekiro: Shadows Die Twice</a></br>
             <a href="../juegos/DeathsDoor.html" class="link">Death's Door</a></br>
             <button class="categoria">Simulación</button></br>
             <a href="../juegos/StardewValley.html" class="link">Stardew Valley</a></br>
@@ -75,7 +75,7 @@
 
             <div class="bloque-info">
                 <h5>Reseñas</h5>
-                <p>Reseñas del juego 1</p>
+                <p><b>@PenitenteSilencioso: </b>“El arte y la música son de otro mundo. Más fluido que el primero, con un combate más pulido. Difícil, pero con ese sabor español tan único.”</p>
             </div>
         </main>
         <footer>
