--- a/juegos/Hades.html
+++ b/juegos/Hades.html
@@ -34,7 +34,7 @@
             <a href="../juegos/GoWRagnarok.html" class="link">God of War Ragnarok</a></br>
             <button class="categoria">Soulslike</button></br>
             <a href="../juegos/EldenRing.html" class="link">Elden Ring</a></br>
-            <a href="../juegos/Sekiro.html" class="link">Sekiro</a></br>
+            <a href="../juegos/Sekiro.html" class="link">Sekiro: Shadows Die Twice</a></br>
             <a href="../juegos/DeathsDoor.html" class="link">Death's Door</a></br>
             <button class="categoria">Simulación</button></br>
             <a href="../juegos/StardewValley.html" class="link">Stardew Valley</a></br>
@@ -52,23 +52,30 @@
                 <img class="portada" src="../IMG/Hades.jpg" alt="Hades">
                 <div class="texto-juego">
                     <h2>Hades</h2>
-                    <p>Descripcion juego 1</p>
+                    <p>Roguelike de acción donde juegas como Zagreus, el hijo de Hades, intentando escapar del inframundo con ayuda de los dioses del Olimpo.</p>
                 </div>
             </div>
 
             <div class="bloque-info">
                 <h3>System Requirements</h3>
-                <p>Especificaciones juego 1</p>
+                <p>SO: Windows 7 / 10</br>
+                    Procesador: Dual Core 2.4 GHz</br>
+                    Memoria: 4 GB RAM</br>
+                    Gráficos: GTX 460 / Radeon HD 5750</br>
+                    Almacenamiento: 15 GB</p>
             </div>
 
             <div class="bloque-info">
                 <h4>Features</h4>
-                <p>Features juego 1</p>
+                <p>Combates rápidos y fluidos.</br>
+                    Narrativa reactiva y progresiva.</br>
+                    Habilidades otorgadas por los dioses.</br>
+                    Rejugabilidad infinita con nuevos desafíos.</p>
             </div>
 
             <div class="bloque-info">
                 <h5>Reseñas</h5>
-                <p>Reseñas del juego 1</p>
+                <p><b>@UnderworldRunner: </b>“Perfecto en ritmo, historia y estilo. Cada escape del infierno se siente fresco. Los dioses tienen más personalidad que en cualquier otro juego.”</p>
             </div>
         </main>
         <footer>
