--- a/juegos/RDR2.html
+++ b/juegos/RDR2.html
@@ -34,7 +34,7 @@
             <a href="../juegos/GoWRagnarok.html" class="link">God of War Ragnarok</a></br>
             <button class="categoria">Soulslike</button></br>
             <a href="../juegos/EldenRing.html" class="link">Elden Ring</a></br>
-            <a href="../juegos/Sekiro.html" class="link">Sekiro</a></br>
+            <a href="../juegos/Sekiro.html" class="link">Sekiro: Shadows Die Twice</a></br>
             <a href="../juegos/DeathsDoor.html" class="link">Death's Door</a></br>
             <button class="categoria">Simulación</button></br>
             <a href="../juegos/StardewValley.html" class="link">Stardew Valley</a></br>
@@ -52,23 +52,30 @@
                 <img class="portada" src="../IMG/RDR2.jpg" alt="ReadDeadRedemption2">
                 <div class="texto-juego">
                     <h2>Read Dead Redemption 2</h2>
-                    <p>Descripcion juego 1</p>
+                    <p>Aventura de mundo abierto ambientada en el Salvaje Oeste, centrada en Arthur Morgan y la banda de Van der Linde.</p>
                 </div>
             </div>
 
             <div class="bloque-info">
                 <h3>System Requirements</h3>
-                <p>Especificaciones juego 1</p>
+                <p>SO: Windows 10</br>
+                    Procesador: Intel i7-4770K / Ryzen 5 1500X</br>
+                    Memoria: 12 GB RAM</br>
+                    Gráficos: GTX 1060 / RX 480</br>
+                    Almacenamiento: 150 GB</p>
             </div>
 
             <div class="bloque-info">
                 <h4>Features</h4>
-                <p>Features juego 1</p>
+                <p>Mundo abierto vivo y detallado.</br>
+                    Narrativa cinematográfica y decisiones morales.</br>
+                    Modo historia y multijugador en línea.</br>
+                    Ciclo día-noche y clima dinámico.</p>
             </div>
 
             <div class="bloque-info">
                 <h5>Reseñas</h5>
-                <p>Reseñas del juego 1</p>
+                <p><b>@ArthurReturns: </b>“Increíble. No hay mundo abierto más vivo. Cada detalle, cada diálogo, cada cigarro que Arthur enciende tiene alma. Una obra de arte moderna.”</p>
             </div>
         </main>
         <footer>
