--- a/juegos/Sekiro.html
+++ b/juegos/Sekiro.html
@@ -34,7 +34,7 @@
             <a href="../juegos/GoWRagnarok.html" class="link">God of War Ragnarok</a></br>
             <button class="categoria">Soulslike</button></br>
             <a href="../juegos/EldenRing.html" class="link">Elden Ring</a></br>
-            <a href="../juegos/Sekiro.html" class="link">Sekiro</a></br>
+            <a href="../juegos/Sekiro.html" class="link">Sekiro: Shadows Die Twice</a></br>
             <a href="../juegos/DeathsDoor.html" class="link">Death's Door</a></br>
             <button class="categoria">Simulación</button></br>
             <a href="../juegos/StardewValley.html" class="link">Stardew Valley</a></br>
@@ -51,24 +51,31 @@
             <div class="info-juego">
                 <img class="portada" src="../IMG/Sekiro.jpg" alt="Sekiro">
                 <div class="texto-juego">
-                    <h2>Sekiro</h2>
-                    <p>Descripcion juego 1</p>
+                    <h2>Shadows Die Twice</h2>
+                    <p>Juego de acción y sigilo ambientado en el Japón feudal. Encarnas a un ninja que busca venganza usando sigilo, reflejos y precisión.</p>
                 </div>
             </div>
 
             <div class="bloque-info">
                 <h3>System Requirements</h3>
-                <p>Especificaciones juego 1</p>
+                <p>SO: Windows 7 / 8 / 10</br>
+                    Procesador: Intel i5-2500K / AMD Ryzen 5 1400</br>
+                    Memoria: 8 GB RAM</br>
+                    Gráficos: GTX 970 / Radeon RX 570</br>
+                    Almacenamiento: 25 GB</p>
             </div>
 
             <div class="bloque-info">
                 <h4>Features</h4>
-                <p>Features juego 1</p>
+                <p>Sistema de combate basado en paradas y precisión.</br>
+                    Mundo interconectado y verticalidad en exploración.</br>
+                    Jefes desafiantes.</br>
+                    Narrativa minimalista y simbólica.</p>
             </div>
 
             <div class="bloque-info">
                 <h5>Reseñas</h5>
-                <p>Reseñas del juego 1</p>
+                <p><b>@OneArmWolf: </b>“La precisión que exige este juego es brutal. Cuando logras derrotar a un jefe, sientes gloria pura. El sistema de parry es una danza mortal perfecta.”</p>
             </div>
         </main>
         <footer>
