--- a/juegos/Ultrakill.html
+++ b/juegos/Ultrakill.html
@@ -34,7 +34,7 @@
             <a href="../juegos/GoWRagnarok.html" class="link">God of War Ragnarok</a></br>
             <button class="categoria">Soulslike</button></br>
             <a href="../juegos/EldenRing.html" class="link">Elden Ring</a></br>
-            <a href="../juegos/Sekiro.html" class="link">Sekiro</a></br>
+            <a href="../juegos/Sekiro.html" class="link">Sekiro: Shadows Die Twice</a></br>
             <a href="../juegos/DeathsDoor.html" class="link">Death's Door</a></br>
             <button class="categoria">Simulación</button></br>
             <a href="../juegos/StardewValley.html" class="link">Stardew Valley</a></br>
@@ -52,23 +52,30 @@
                 <img class="portada" src="../IMG/Ultrakill.jpg" alt="Ultrakill">
                 <div class="texto-juego">
                     <h2>Ultrakill</h2>
-                    <p>Descripcion juego 1</p>
+                    <p>Shooter retro ultrarrápido inspirado en DOOM y Quake, con un estilo pixelado y un ritmo de combate frenético.</p>
                 </div>
             </div>
 
             <div class="bloque-info">
                 <h3>System Requirements</h3>
-                <p>Especificaciones juego 1</p>
+                <p>SO: Windows 10</br>
+                    Procesador: Intel Core i5-750</br>
+                    Memoria: 8 GB RAM</br>
+                    Gráficos: GTX 460 / Radeon HD 5850</br>
+                    Almacenamiento: 4 GB</p>
             </div>
 
             <div class="bloque-info">
                 <h4>Features</h4>
-                <p>Features juego 1</p>
+                <p>Combate basado en velocidad y estilo.</br>
+                    Sangre como recurso para curarte.</br>
+                    Múltiples armas y habilidades.</br>
+                    Estilo visual retro con efectos modernos.</p>
             </div>
 
             <div class="bloque-info">
                 <h5>Reseñas</h5>
-                <p>Reseñas del juego 1</p>
+                <p><b>@BloodFuelled: </b>“Velocidad, estilo y pura violencia arcade. Es como si Doom tomara espresso. El mejor shooter frenético de la década.”</p>
             </div>
         </main>
         <footer>
