HABIA 1 ERROR, AHORA SI QUE SI

--- a/paginaPrincipal/paginaInicio.html
+++ b/paginaPrincipal/paginaInicio.html
@@ -65,7 +65,7 @@
                     <img src="../IMG/DeathsDoor.jpg" alt="Death's Door" onclick="window.location.href='../juegos/DeathsDoor.html'"></br>
                     <p>Simulación</p>
                     <img src="../IMG/StardewValley.jpg" alt="Stardew Valley" onclick="window.location.href='../juegos/StardewValley.html'">
-                    <img src="../IMG/ForzaHorizon5.jpg" alt="Forza Horizon 5" onclick="window.location.href='../juegos/ForzaHorizon5.html'">
+                    <img src="../IMG/ForzaHorizon5.jpg" alt="Forza Horizon 5" onclick="window.location.href='../juegos/Forza.html'">
                     <img src="../IMG/JurassicWorldEvolution3.jpg" alt="Jurassic World Evolution 3" onclick="window.location.href='../juegos/JWEvolution.html'"></br>
                     <p>FPS</p>
                     <img src="../IMG/Battlefield6.jpg" alt="Battlefield 6" onclick="window.location.href='../juegos/Battlefield.html'">
