AHORA SI QUE SI COÑO FIN DEL FIN

--- a/juegos/BG3.html
+++ b/juegos/BG3.html
@@ -58,11 +58,11 @@
 
                 <div class="bloque-info">
                     <h3>System Requirements</h3>
-                    <p>SO: Windows 10 64 bits</br>
-                        Procesador: Intel i5-4690 / AMD FX 8350</br>
-                        Memoria: 16 GB RAM</br>
-                        Gráficos: GTX 970 / RX 480</br>
-                        Almacenamiento: 150 GB</p>
+                    <p> <b>SO:</b> Windows 10 64 bits</br>
+                        <b>Procesador:</b> Intel i5-4690 / AMD FX 8350</br>
+                        <b>Memoria:</b> 16 GB RAM</br>
+                        <b>Gráficos:</b> GTX 970 / RX 480</br>
+                        <b>Almacenamiento:</b> 150 GB</p>
                 </div>
 
                 <div class="bloque-info">
