--- a/juegos/Battlefield.html
+++ b/juegos/Battlefield.html
@@ -58,11 +58,11 @@
 
                 <div class="bloque-info">
                     <h3>System Requirements</h3>
-                    <p>SO: Windows 10 de 64 bits</br>
-                        Procesador: AMD Ryzen 5 3600 / Intel Core i5-9600K</br>
-                        Memoria: 16 GB de RAM</br>
-                        Gráficos: NVIDIA GeForce RTX 2060 / AMD Radeon RX 5600 XT</br>
-                        Almacenamiento: 100 GB de espacio disponible</p>
+                    <p> <b>SO:</b> Windows 10 de 64 bits</br>
+                        <b>Procesador:</b> AMD Ryzen 5 3600 / Intel Core i5-9600K</br>
+                        <b>Memoria:</b> 16 GB de RAM</br>
+                        <b>Gráficos:</b> NVIDIA GeForce RTX 2060 / AMD Radeon RX 5600 XT</br>
+                        <b>Almacenamiento:</b> 100 GB de espacio disponible</p>
                 </div>
 
                 <div class="bloque-info">
