--- a/juegos/CS2.html
+++ b/juegos/CS2.html
@@ -58,11 +58,11 @@
 
                 <div class="bloque-info">
                     <h3>System Requirements</h3>
-                    <p>SO: Windows 10 64 bits</br>
-                        Procesador: Intel Core i5-750 / AMD FX-8100</br>
-                        Memoria: 8 GB RAM</br>
-                        Gráficos: GTX 970 / RX 470</br>
-                        Almacenamiento: 85 GB</p>
+                    <p> <b>SO:</b> Windows 10 64 bits</br>
+                        <b>Procesador:</b> Intel Core i5-750 / AMD FX-8100</br>
+                        <b>Memoria:</b> 8 GB RAM</br>
+                        <b>Gráficos:</b> GTX 970 / RX 470</br>
+                        <b>Almacenamiento:</b> 85 GB</p>
                 </div>
 
                 <div class="bloque-info">
