--- a/juegos/DeadCells.html
+++ b/juegos/DeadCells.html
@@ -58,11 +58,11 @@
 
                 <div class="bloque-info">
                     <h3>System Requirements</h3>
-                    <p>SO: Windows 7 / 10 / 11</br>
-                        Procesador: Intel i5-2500 / AMD FX-6300</br>
-                        Memoria: 4 GB RAM</br>
-                        Gráficos: NVIDIA GTX 450 / AMD HD 5750</br>
-                        Almacenamiento: 500 MB</p>
+                    <p> <b>SO:</b> Windows 7 / 10 / 11</br>
+                        <b>Procesador:</b> Intel i5-2500 / AMD FX-6300</br>
+                        <b>Memoria:</b> 4 GB RAM</br>
+                        <b>Gráficos:</b> NVIDIA GTX 450 / AMD HD 5750</br>
+                        <b>Almacenamiento:</b> 500 MB</p>
                 </div>
 
                 <div class="bloque-info">
