--- a/juegos/Forza.html
+++ b/juegos/Forza.html
@@ -58,11 +58,11 @@
 
                 <div class="bloque-info">
                     <h3>System Requirements</h3>
-                    <p>SO: Windows 10</br>
-                        Procesador: Ryzen 5 1500X / i5-8400</br>
-                        Memoria: 16 GB RAM</br>
-                        Gráficos: GTX 1070 / RX 590</br>
-                        Almacenamiento: 110 GB</p>
+                    <p> <b>SO:</b> Windows 10</br>
+                        <b>Procesador:</b> Ryzen 5 1500X / i5-8400</br>
+                        <b>Memoria:</b> 16 GB RAM</br>
+                        <b>Gráficos:</b> GTX 1070 / RX 590</br>
+                        <b>Almacenamiento:</b> 110 GB</p>
                 </div>
 
                 <div class="bloque-info">
