--- a/juegos/Hades.html
+++ b/juegos/Hades.html
@@ -58,11 +58,11 @@
 
                 <div class="bloque-info">
                     <h3>System Requirements</h3>
-                    <p>SO: Windows 7 / 10</br>
-                        Procesador: Dual Core 2.4 GHz</br>
-                        Memoria: 4 GB RAM</br>
-                        Gráficos: GTX 460 / Radeon HD 5750</br>
-                        Almacenamiento: 15 GB</p>
+                    <p> <b>SO:</b> Windows 7 / 10</br>
+                        <b>Procesador:</b> Dual Core 2.4 GHz</br>
+                        <b>Memoria</b>: 4 GB RAM</br>
+                        <b>Gráficos:</b> GTX 460 / Radeon HD 5750</br>
+                        <b>Almacenamiento:</b> 15 GB</p>
                 </div>
 
                 <div class="bloque-info">
