--- a/juegos/HollowKnight.html
+++ b/juegos/HollowKnight.html
@@ -58,11 +58,11 @@
 
                 <div class="bloque-info">
                     <h3>System Requirements</h3>
-                    <p>SO: Windows 7 / 8 / 10</br>
-                        Procesador: Intel Core 2 Duo E5200</br>
-                        Memoria: 4 GB de RAM</br>
-                        Gráficos: GeForce 9800GTX+ (1GB)</br>
-                        Almacenamiento: 9 GB disponibles</p>
+                    <p> <b>SO:</b> Windows 7 / 8 / 10</br>
+                        <b>Procesador:</b> Intel Core 2 Duo E5200</br>
+                        <b>Memoria:</b> 4 GB de RAM</br>
+                        <b>Gráficos:</b> GeForce 9800GTX+ (1GB)</br>
+                        <b>Almacenamiento:</b> 9 GB disponibles</p>
                 </div>
 
                 <div class="bloque-info">
