--- a/juegos/JWEvolution.html
+++ b/juegos/JWEvolution.html
@@ -58,11 +58,11 @@
 
                 <div class="bloque-info">
                     <h3>System Requirements</h3>
-                    <p>SO: Windows 10 64 bits</br>
-                        Procesador: Intel i7-4770K / Ryzen 5 1600</br>
-                        Memoria: 16 GB RAM</br>
-                        Gráficos: GTX 1070 / RX Vega 56</br>
-                        Almacenamiento: 50 GB</p>
+                    <p> <b>SO:</b> Windows 10 64 bits</br>
+                        <b>Procesador:</b> Intel i7-4770K / Ryzen 5 1600</br>
+                        <b>Memoria:</b> 16 GB RAM</br>
+                        <b>Gráficos:</b> GTX 1070 / RX Vega 56</br>
+                        <b>Almacenamiento:</b> 50 GB</p>
                 </div>
 
                 <div class="bloque-info">
