--- a/juegos/StardewValley.html
+++ b/juegos/StardewValley.html
@@ -58,11 +58,11 @@
 
                 <div class="bloque-info">
                     <h3>System Requirements</h3>
-                    <p>SO: Windows 7 / 10</br>
-                        Procesador: 2 GHz Dual Core</br>
-                        Memoria: 2 GB RAM</br>
-                        Gráficos: Intel HD 3000</br>
-                        Almacenamiento: 500 MB</p>
+                    <p> <b>SO:</b> Windows 7 / 10</br>
+                        <b>Procesador:</b> 2 GHz Dual Core</br>
+                        <b>Memoria:</b> 2 GB RAM</br>
+                        <b>Gráficos:</b> Intel HD 3000</br>
+                        <b>Almacenamiento:</b> 500 MB</p>
                 </div>
 
                 <div class="bloque-info">
