--- a/juegos/Blasphemous.html
+++ b/juegos/Blasphemous.html
@@ -58,11 +58,11 @@
 
                 <div class="bloque-info">
                     <h3>System Requirements</h3>
-                    <p>SO: Windows 10</br>
-                        Procesador: Intel Core i3-6100</br>
-                        Memoria: 8 GB RAM</br>
-                        Gráficos: GTX 750 Ti / Radeon HD 7950</br>
-                        Almacenamiento: 10 GB</p>
+                    <p> <b>SO:</b> Windows 10</br>
+                        <b>Procesador:</b> Intel Core i3-6100</br>
+                        <b>Memoria:</b> 8 GB RAM</br>
+                        <b>Gráficos:</b> GTX 750 Ti / Radeon HD 7950</br>
+                        <b>Almacenamiento:</b> 10 GB</p>
                 </div>
 
                 <div class="bloque-info">
