--- a/juegos/CultoftheLamb.html
+++ b/juegos/CultoftheLamb.html
@@ -58,11 +58,11 @@
 
                 <div class="bloque-info">
                     <h3>System Requirements</h3>
-                    <p>SO: Windows 10 64 bits</br>
-                        Procesador: Intel i5-3470 / AMD FX-8300</br>
-                        Memoria: 8 GB RAM</br>
-                        Gráficos: GTX 560 Ti / HD 7750</br>
-                        Almacenamiento: 4 GB</p>
+                    <p> <b>SO:</b> Windows 10 64 bits</br>
+                        <b>Procesador:</b> Intel i5-3470 / AMD FX-8300</br>
+                        <b>Memoria:</b> 8 GB RAM</br>
+                        <b>Gráficos:</b> GTX 560 Ti / HD 7750</br>
+                        <b>Almacenamiento:</b> 4 GB</p>
                 </div>
 
                 <div class="bloque-info">
