--- a/juegos/DeathsDoor.html
+++ b/juegos/DeathsDoor.html
@@ -58,11 +58,11 @@
 
                 <div class="bloque-info">
                     <h3>System Requirements</h3>
-                    <p>SO: Windows 10</br>
-                        Procesador: Intel Core i5-8250U</br>
-                        Memoria: 8 GB RAM</br>
-                        Gráficos: GeForce MX150</br>
-                        Almacenamiento: 20 GB</p>
+                    <p> <b>SO:</b> Windows 10</br>
+                        <b>Procesador:</b> Intel Core i5-8250U</br>
+                        <b>Memoria:</b> 8 GB RAM</br>
+                        <b>Gráficos:</b> GeForce MX150</br>
+                        <b>Almacenamiento:</b> 20 GB</p>
                 </div>
 
                 <div class="bloque-info">
