--- a/juegos/EldenRing.html
+++ b/juegos/EldenRing.html
@@ -58,11 +58,11 @@
 
                 <div class="bloque-info">
                     <h3>System Requirements</h3>
-                    <p>SO: Windows 10</br>
-                        Procesador: Intel i5-8400 / Ryzen 3 3300X</br>
-                        Memoria: 12 GB RAM</br>
-                        Gráficos: GTX 1060 / RX 580</br>
-                        Almacenamiento: 60 GB</p>
+                    <p> <b>SO:</b> Windows 10</br>
+                        <b>Procesador:</b> Intel i5-8400 / Ryzen 3 3300X</br>
+                        <b>Memoria:</b> 12 GB RAM</br>
+                        <b>Gráficos:</b> GTX 1060 / RX 580</br>
+                        <b>Almacenamiento:</b> 60 GB</p>
                 </div>
 
                 <div class="bloque-info">
