--- a/juegos/GoWRagnarok.html
+++ b/juegos/GoWRagnarok.html
@@ -58,11 +58,11 @@
 
                 <div class="bloque-info">
                     <h3>System Requirements</h3>
-                    <p>SO: Windows 10 de 64 bits</br>
-                        Procesador: Intel i5-6600K / AMD Ryzen 5 2600</br>
-                        Memoria: 16 GB de RAM</br>
-                        Gráficos: NVIDIA GTX 1060 / AMD RX 570</br>
-                        Almacenamiento: 70 GB de espacio disponible</p>
+                    <p> <b>SO:</b> Windows 10 de 64 bits</br>
+                        <b>Procesador:</b> Intel i5-6600K / AMD Ryzen 5 2600</br>
+                        <b>Memoria:</b> 16 GB de RAM</br>
+                        <b>Gráficos:</b> NVIDIA GTX 1060 / AMD RX 570</br>
+                        <b>Almacenamiento:</b> 70 GB de espacio disponible</p>
                 </div>
 
                 <div class="bloque-info">
