--- a/juegos/Ori.html
+++ b/juegos/Ori.html
@@ -58,11 +58,11 @@
 
                 <div class="bloque-info">
                     <h3>System Requirements</h3>
-                    <p>SO: Windows 10</br>
-                        Procesador: AMD Athlon X4 / Intel i5-4460</br>
-                        Memoria: 8 GB RAM</br>
-                        Gráficos: GTX 950 / R7 370</br>
-                        Almacenamiento: 20 GB</p>
+                    <p> <b>SO:</b> Windows 10</br>
+                        <b>Procesador:</b> AMD Athlon X4 / Intel i5-4460</br>
+                        <b>Memoria:</b> 8 GB RAM</br>
+                        <b>Gráficos:</b> GTX 950 / R7 370</br>
+                        <b>Almacenamiento:</b> 20 GB</p>
                 </div>
 
                 <div class="bloque-info">
