--- a/juegos/RDR2.html
+++ b/juegos/RDR2.html
@@ -58,11 +58,11 @@
 
                 <div class="bloque-info">
                     <h3>System Requirements</h3>
-                    <p>SO: Windows 10</br>
-                        Procesador: Intel i7-4770K / Ryzen 5 1500X</br>
-                        Memoria: 12 GB RAM</br>
-                        Gráficos: GTX 1060 / RX 480</br>
-                        Almacenamiento: 150 GB</p>
+                    <p> <b>SO:</b> Windows 10</br>
+                        <b>Procesador:</b> Intel i7-4770K / Ryzen 5 1500X</br>
+                        <b>Memoria:</b> 12 GB RAM</br>
+                        <b>Gráficos:</b> GTX 1060 / RX 480</br>
+                        <b>Almacenamiento:</b> 150 GB</p>
                 </div>
 
                 <div class="bloque-info">
