--- a/juegos/Sekiro.html
+++ b/juegos/Sekiro.html
@@ -58,11 +58,11 @@
 
                 <div class="bloque-info">
                     <h3>System Requirements</h3>
-                    <p>SO: Windows 7 / 8 / 10</br>
-                        Procesador: Intel i5-2500K / AMD Ryzen 5 1400</br>
-                        Memoria: 8 GB RAM</br>
-                        Gráficos: GTX 970 / Radeon RX 570</br>
-                        Almacenamiento: 25 GB</p>
+                    <p> <b>SO:</b> Windows 7 / 8 / 10</br>
+                        <b>Procesador:</b> Intel i5-2500K / AMD Ryzen 5 1400</br>
+                        <b>Memoria:</b> 8 GB RAM</br>
+                        <b>Gráficos:</b> GTX 970 / Radeon RX 570</br>
+                        <b>Almacenamiento:</b> 25 GB</p>
                 </div>
 
                 <div class="bloque-info">
