--- a/juegos/Ultrakill.html
+++ b/juegos/Ultrakill.html
@@ -58,11 +58,11 @@
 
                 <div class="bloque-info">
                     <h3>System Requirements</h3>
-                    <p>SO: Windows 10</br>
-                        Procesador: Intel Core i5-750</br>
-                        Memoria: 8 GB RAM</br>
-                        Gráficos: GTX 460 / Radeon HD 5850</br>
-                        Almacenamiento: 4 GB</p>
+                    <p> <b>SO:</b> Windows 10</br>
+                        <b>Procesador:</b> Intel Core i5-750</br>
+                        <b>Memoria:</b> 8 GB RAM</br>
+                        <b>Gráficos:</b> GTX 460 / Radeon HD 5850</br>
+                        <b>Almacenamiento:</b> 4 GB</p>
                 </div>
 
                 <div class="bloque-info">
